--- a/formwithcss.html
+++ b/formwithcss.html
@@ -17,7 +17,7 @@
             width:30%;
             text-align: right;
         }
-        input,textarea{
+        input,textarea,select{
             width: 50%;
             height:30px;
         }
@@ -29,7 +29,7 @@
             margin-top: 50px;
             /* height: 1000px; */
         }
-        input[type=radio]
+        input[type=radio],input[type=checkbox]
         {
             height:15px;
         }
@@ -37,6 +37,7 @@
 </head>
 <body>
     <div class="container">
+        <form action="thankyou.html">
     <div class="form-control">
         <label>Name :</label>
         <input type="text">
@@ -58,6 +59,43 @@
         <label for="r2">Other</label>
         </div>
     </div>
+    <div class="form-control">
+        <label >Languages known</label>
+        <div style="display: flex;">
+            <input type="checkbox"  id="c1"><label for="c1">Hindi</label>
+            <input type="checkbox"  id="c2"><label for="c2">English</label>
+            <input type="checkbox"  id="c3"><label for="c3">Gujarati</label>
+        </div>
+    </div>
+    <div class="form-control">
+        <label >State</label>
+        <select>
+            <optgroup label="North India">
+                <option>Delhi</option>
+                <option>Haryana</option>
+                <option>Punjab</option>
+            </optgroup>
+                 <optgroup label="South India">
+                <option>Karnataka</option>
+                <option>Telangana</option>
+                <option>TamilNadu</option>
+            </optgroup>
+        </select>
+    </div>
+    <div class="form-control">
+        <label for="">choose color</label>
+        <input type="color">
+    </div>
+     <div class="form-control">
+        <label for="">enter age</label>
+        <input type="number">
+    </div>
+    <div class="form-control">
+        <input type="button" value="Save">
+        <input type="submit" value="Ok">
+        <input type="reset" value="Cancel">
+    </div>
+    </form>
     </div>
     
 </body>
