--- a/src/demo.html
+++ b/src/demo.html
@@ -13,14 +13,52 @@
  <div class="text-6xl ">LOGO</div>
 
    <ul class="flex list-none gap-8 justify-end pr-10" > <li><a href="#">Home</a></li>
-    <li><a href="#">Services</a></li>
-    <li><a href="#">About</a></li>
+    <li><a href="#">
+Site & Layout Plan</a></li>
+    <li><a href="#about">
+about</a></li>
+<li>
+    <a href="">GAllery</a>
+</li>
     <li><a href="#">Contact</a></li>
 </ul>
 </nav>
     <div class="bg-blue-200 text-center
-    text-4xl text-red-500 font-bold w-88 mx-auto">
-        Adani Reality
+    text-4xl text-red-500 font-bold   mx-auto">
+        <img class="" src="realstateimages/26908595_real_estate_web_banner_30.jpg" alt="">
     </div>
+    <section class="w-4/5 mx-auto my-10 text-center text-gray-800">
+        <h1 class="text-5xl text-center font-bold">Welcome to Adani 
+            <br>
+           <span class="text-red-800">  The Views ! </span></h1>
+           <br>
+           <div >
+            A fabulous residential property in Ghatkopar - Palazzio At Adani The Views brings you a lavish city lifestyle. Designed in a traditional Indian architectural style - it features a central courtyard connecting 4 towers. Its 2, 2.5, 4 BHK & Jodi flats are Vastu-compliant, and feature balconies with stunning views of green mangroves. You also get access to a range of amenities such as a multipurpose hall, fitness centre, swimming pool, game room, Jain Derasar, and yoga & meditation zone. A fabulous skywalk on the 23rd floor allows you to relax beside beautiful views.
+           </div>
+    </section>
+    <!-- about section starts  -->
+    <section id="about" class="w-full flex">
+        <div class="w-1/2 h-[500px] bg-black text-white flex 
+        flex-col p-20">
+        <div class="text-4xl font-bold underline">About us </div>
+        <div class="mt-14 leading-8">
+            Introducing Adani Group 2 & 3 BHK Property in Ahmedabad.
+            A fabulous residential property in Ghatkopar - Palazzio At Adani The Views brings you a lavish city lifestyle. Designed in a traditional Indian architectural style - it features a central courtyard connecting 4 towers. Its 2, 2.5, 4 BHK & Jodi flats are Vastu-compliant, and feature balconies with stunning views of green mangroves.
+        </div>
+        </div>
+        <img class="w-1/2 h-[500px]" src="realstateimages/about-home.webp" alt="">
+    </section>
+    <!-- about section end  -->
+     <!-- client testimonials starts -->
+      <div class="text-4xl font-bold my-10 text-center"> Our Happy <span class="text-red-800">Clients</span></div>
+      <section id="client-testimonials" class="flex w-4/5 mx-auto gap-10 justify-center flex-wrap">
+        <iframe class="w-1/4 aspect-square"  src="https://www.youtube.com/embed/GyHwhTTPUt8?si=m_qxqZiYIHY4pSOp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="w-1/4 aspect-square" src="https://www.youtube.com/embed/Tq7iopSU16g?si=J0cmToRWTfVVDU65" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="w-1/4 aspect-square" src="https://www.youtube.com/embed/aPdFTN3TQBo?si=GPZHgQpEecH6VFZJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="w-1/4 aspect-square"  src="https://www.youtube.com/embed/GyHwhTTPUt8?si=m_qxqZiYIHY4pSOp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="w-1/4 aspect-square" src="https://www.youtube.com/embed/Tq7iopSU16g?si=J0cmToRWTfVVDU65" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="w-1/4 aspect-square" src="https://www.youtube.com/embed/aPdFTN3TQBo?si=GPZHgQpEecH6VFZJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </section>
+      <!-- client testimonials end -->
 </body>
 </html>
