--- a/src/home.html
+++ b/src/home.html
@@ -12,15 +12,16 @@
  items-center">
  <div class="text-6xl ">LOGO</div>
 
-   <ul class="flex list-none gap-8 justify-end pr-10" > <li><a href="#">Home</a></li>
-    <li><a href="#">
+   <ul class="flex list-none gap-8 justify-end pr-10" >
+     <li><a href="home.html">Home</a></li>
+    <li><a href="site.html">
 Site & Layout Plan</a></li>
-    <li><a href="#about">
+    <li><a href="about.html">
 about</a></li>
 <li>
-    <a href="">GAllery</a>
+    <a href="gallery.html">GAllery</a>
 </li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
     <div class="bg-blue-200 text-center
@@ -60,5 +61,32 @@ about</a></li>
         <iframe class="w-1/4 aspect-square" src="https://www.youtube.com/embed/aPdFTN3TQBo?si=GPZHgQpEecH6VFZJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
       <!-- client testimonials end -->
+      <!-- footer starts  -->
+       <div class="text-4xl font-bold my-10 text-center"> Contact <span class="text-red-800">US</span></div>
+      <footer class="flex" >
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117381.98346854029!2d72.39596324335938!3d23.163374700000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e82bd95856d0d%3A0xdcd8bba3acfc2e97!2sAdani%20Shantigram!5e0!3m2!1sen!2sin!4v1749790653545!5m2!1sen!2sin" 
+class="w-1/2 h-96 " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<div class="h-96 w-1/2 bg-black text-white">
+<form action="thankyou.html" class="flex flex-col p-20">
+    
+    <label>Name</label>
+    <input type="text" class="bg-white text-black">
+    <br>
+    <label>Contact no </label>
+    <input type="text" class="bg-white text-black">
+    <br>
+    <label for="">Message</label>
+    <textarea class="bg-white text-black">
+
+    </textarea>
+    <br>
+    <div>
+<input type="submit" value="Send" class="w-48 bg-sky-500 h-12 text-xl text-black font-bold">
+<input type="reset" value="cancel" class="w-48 bg-orange-500 h-12 text-xl text-black font-bold">
+</div>
+</form>
+</div>
+       </footer>
+       <!-- footer end  -->
 </body>
 </html>
