--- a/src/gallery.html
+++ b/src/gallery.html
@@ -16,7 +16,7 @@
    <ul class="flex list-none gap-8 justify-end pr-10" >
      <li><a href="home.html">Home</a></li>
     <li><a href="site.html">
-Site & Layout Plan</a></li>
+Ongoing Projects</a></li>
     <li><a href="about.html">
 about</a></li>
 <li>
